--- a/src/lib/krb5/os/td_krb5.conf
+++ b/src/lib/krb5/os/td_krb5.conf
@@ -17,3 +17,17 @@
 	bad.idea = US.GOV
 	.bad.idea = NSA.GOV
 	clipper.bad.idea = NIST.GOV
+
+[plugins]
+        plugin_prng = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name =  plugin_yarrow_prng
+                plugin_type = service
+        }
+        plugin_pa = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name = plugin_encrypted_challenge_pa
+                plugin_type = service
+        }
