--- a/src/config-files/krb5.conf
+++ b/src/config-files/krb5.conf
@@ -24,3 +24,18 @@
 
 [logging]
 #	kdc = CONSOLE
+
+[plugins]
+        plugin_prng = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name =  plugin_yarrow_prng
+                plugin_type = service
+        }
+        plugin_pa = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name = plugin_encrypted_challenge_pa
+                plugin_type = service
+        }
+
