--- a/src/lib/krb5/krb/t_krb5.conf
+++ b/src/lib/krb5/krb/t_krb5.conf
@@ -50,3 +50,16 @@
 	media.mit.edu = MEDIA-LAB.MIT.EDU
 	.ucsc.edu = CATS.UCSC.EDU
 
+[plugins]
+        plugin_prng = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name =  plugin_yarrow_prng
+                plugin_type = service
+        }
+        plugin_pa = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name = plugin_encrypted_challenge_pa
+                plugin_type = service
+        }
