--- a/src/lib/krb5/os/Makefile.in
+++ b/src/lib/krb5/os/Makefile.in
@@ -224,6 +224,22 @@ check-unix::
 		>> ./t_an.conf
 	echo 'auth_to_local = DEFAULT' >> ./t_an.conf
 	echo '}' >> ./t_an.conf
+	echo '[plugins]' >> ./t_an.conf
+	echo 'plugin_prng = {' >> ./t_an.conf
+	echo 'plugin_factory_name = plugin_default_factory' >> ./t_an.conf
+	echo 'plugin_factory_type = static' >> ./t_an.conf
+	echo 'plugin_name =  plugin_yarrow_prng' >> ./t_an.conf
+	echo 'plugin_type = service' >> ./t_an.conf
+	echo ' }' >> ./t_an.conf
+	echo 'plugin_pa = {' >> ./t_an.conf
+	echo 'plugin_factory_name = plugin_default_factory' >> ./t_an.conf
+	echo 'plugin_factory_type = static' >> ./t_an.conf
+	echo 'plugin_name = plugin_encrypted_challenge_pa' >> ./t_an.conf
+	echo 'plugin_type = service' >> ./t_an.conf
+	echo '}' >> ./t_an.conf
+
+
+
 #	if test -r ../../../admin/aname/kdb5_anadd ; then \
 #		KRB5_CONFIG=./t_an.conf ; export KRB5_CONFIG ; \
 #		$(KRB5_RUN_ENV) $(VALGRIND) ./t_an_to_ln p/i/i/i@r p/a/b/c@r; \
