--- a/src/configure.in
+++ b/src/configure.in
@@ -1076,6 +1076,7 @@ V5_AC_OUTPUT_MAKEFILE(.
 	lib/crypto/krb/dk lib/crypto/$CRYPTO_IMPL/enc_provider
 	lib/crypto/$CRYPTO_IMPL/hash_provider lib/crypto/krb/checksum
 	lib/crypto/krb/prf lib/crypto/krb/rand2key
+	lib/crypto/krb/yarrow
 	lib/crypto/$CRYPTO_IMPL lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
 	lib/crypto/krb/old lib/crypto/krb/raw lib/crypto/$CRYPTO_IMPL/sha1
 	lib/crypto/krb/arcfour lib/crypto/$CRYPTO_IMPL/aes
@@ -1117,7 +1118,6 @@ dnl	ccapi ccapi/lib ccapi/lib/unix ccapi/server ccapi/server/unix ccapi/test
 
 	plugins/prng
 	plugin_core/impl
-	plugins/prng/plugin_yarrow
 	plugins/pa
 	plugins/pa/encrypted_challenge
 	plugin_core
