--- a/src/config-files/krb5.conf
+++ b/src/config-files/krb5.conf
@@ -38,4 +38,10 @@
                 plugin_name = plugin_encrypted_challenge_pa
                 plugin_type = service
         }
+        plugin_pwd_qlty = {
+                plugin_factory_name = plugin_default_factory
+                plugin_factory_type = static
+                plugin_name = plugin_pwd_qlty_krb
+                plugin_type = service
+        }
 
