ticket: 6737 subject: Trace logging
Add trace logging infrastructure code, enabled by the KRB5_TRACE
environment variable or the API functions krb5_set_trace_callback()
or krb5_set_trace_filename().  As a start, add tracing events for:
  * AS-REQ client code, including FAST and preauth
  * TGS-REQ client code
  * AP-REQ and AP-REP code (client and server)
  * sendto_kdc
  * Selected ccache operations
  * Selected keytab operations


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24118 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/krb5/os/Makefile.in
+++ b/src/lib/krb5/os/Makefile.in
@@ -50,6 +50,7 @@ STLIBOBJS= \
         thread_safe.o   \
 	timeofday.o	\
 	toffset.o	\
+	trace.o		\
 	unlck_file.o	\
 	ustime.o	\
 	write_msg.o
@@ -93,6 +94,7 @@ OBJS= \
         $(OUTPRE)thread_safe.$(OBJEXT)  \
 	$(OUTPRE)timeofday.$(OBJEXT)	\
 	$(OUTPRE)toffset.$(OBJEXT)	\
+	$(OUTPRE)trace.$(OBJEXT)	\
 	$(OUTPRE)unlck_file.$(OBJEXT)	\
 	$(OUTPRE)ustime.$(OBJEXT)	\
 	$(OUTPRE)write_msg.$(OBJEXT)
@@ -136,6 +138,7 @@ SRCS= \
         $(srcdir)/thread_safe.c \
 	$(srcdir)/timeofday.c	\
 	$(srcdir)/toffset.c	\
+	$(srcdir)/trace.c	\
 	$(srcdir)/unlck_file.c	\
 	$(srcdir)/ustime.c	\
 	$(srcdir)/write_msg.c
