Added facilities to handle multiple impls of the same static plugins. It is based on plugin_id.
As a proof of the concept, the password quality validation plugins were considered.
So, the following happens:
In the krb5.conf we indicate that we potentially want two pwd quality plugins: plugin_pwd_qlty_krb (native MIT kerb code extracted from server_mics.c) and plugin_pwd_qlty_X (bogus,as a matter of fact, almost identical to plugin_pwd_qlty_krb impl).
In the caller, i.e. in passwd_check of lib/kadm5/srv/server_misc.c, we call KRB and X impl's and verify the pwd against both of the policies:
 plugin_manager_get_service(srv_handle->context->pl_handle, "plugin_pwd_qlty", PWD_QLTY_KRB);
 plugin_manager_get_service(srv_handle->context->pl_handle, "plugin_pwd_qlty", PWD_QLTY_X);

(It is proof of the concept.)




git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@24135 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -10,6 +10,7 @@ mydir=.
 SUBDIRS=util include plugin_core plugin_core/impl    \
 	plugins/pa plugins/pa/encrypted_challenge \
 	plugins/pwd_qlty plugins/pwd_qlty/plugin_pwd_qlty_krb	\
+	plugins/pwd_qlty/plugin_pwd_qlty_X	\
 	lib \
 	@ldap_plugin_dir@ \
 	plugins/kdb/db2 \
