--- a/src/config-files/krb5.conf
+++ b/src/config-files/krb5.conf
@@ -26,22 +26,24 @@
 #	kdc = CONSOLE
 
 [plugins]
-        plugin_prng = {
+        plugin_list = PQ1
+        plugin_list = PQ2
+
+        PQ1 = {
+                plugin_api = plugin_pwd_qlty
                 plugin_factory_name = plugin_default_factory
                 plugin_factory_type = static
-                plugin_name =  plugin_yarrow_prng
+                plugin_name = plugin_pwd_qlty_X
                 plugin_type = service
+                plugin_id = 1
         }
-        plugin_pa = {
-                plugin_factory_name = plugin_default_factory
-                plugin_factory_type = static
-                plugin_name = plugin_encrypted_challenge_pa
-                plugin_type = service
-        }
-        plugin_pwd_qlty = {
+
+        PQ2 = {
+                plugin_api = plugin_pwd_qlty
                 plugin_factory_name = plugin_default_factory
                 plugin_factory_type = static
                 plugin_name = plugin_pwd_qlty_krb
                 plugin_type = service
+                plugin_id = 0
         }
 
