Added facilities to handle dynamic plugins.
For the purpose of demonstration, a new plugin pwd_qlty_DYN was created.
The new section in krb5.conf for dynamic plugins looks as follows
        plugin_list = PQ_DYN
        PQ_DYN = {
                plugin_api = plugin_pwd_qlty
                plugin_factory_name = plugin_dyn_factory
                plugin_factory_type = dynamic
                plugin_name = plugin_pwd_qlty_DYN
                plugin_factory_path = /var/tsitkova/Sources/pl/src/plugin_dynamic/libplugin_dynamic.so
                plugin_id = 33
        }
The test appl is server_misc.c.



git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@24149 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -1123,6 +1123,7 @@ dnl	ccapi ccapi/lib ccapi/lib/unix ccapi/server ccapi/server/unix ccapi/test
 	plugins/pa
 	plugins/pa/encrypted_challenge
 	plugin_core
+	plugin_dynamic
 
 	clients clients/klist clients/kinit clients/kvno
 	clients/kdestroy clients/kpasswd clients/ksu
