Renamed factory into loader. Example of plugin section in krb5.conf after renaming:         PQ_DYN = {                 plugin_api = plugin_pwd_qlty                 plugin_loader_name = plugin_dyn_loader                 plugin_loader_type = dynamic                 plugin_name = plugin_pwd_qlty_DYN                 plugin_loader_path = /var/tsitkova/Sources/pl/src/plugin_dynamic/libplugin_dynamic.so                 plugin_type = service                 plugin_id = 33         }
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/plugins@24155 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config-files/krb5.conf
+++ b/src/config-files/krb5.conf
@@ -31,8 +31,8 @@
 
         PQ1 = {
                 plugin_api = plugin_pwd_qlty
-                plugin_factory_name = plugin_default_factory
-                plugin_factory_type = static
+                plugin_loader_name = plugin_default_loader
+                plugin_loader_type = static
                 plugin_name = plugin_pwd_qlty_X
                 plugin_type = service
                 plugin_id = 1
@@ -40,8 +40,8 @@
 
         PQ2 = {
                 plugin_api = plugin_pwd_qlty
-                plugin_factory_name = plugin_default_factory
-                plugin_factory_type = static
+                plugin_loader_name = plugin_default_loader
+                plugin_loader_type = static
                 plugin_name = plugin_pwd_qlty_krb
                 plugin_type = service
                 plugin_id = 0
