Make NSS back-end build when the build directory is separate from the source directory.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/nss@24246 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/nss/md5/Makefile.in
+++ b/src/lib/crypto/nss/md5/Makefile.in
@@ -8,7 +8,7 @@ DEFS=
 
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
-LOCALINCLUDES = -I.. @CRYPTO_IMPL_CFLAGS@
+LOCALINCLUDES = -I$(srcdir)/.. @CRYPTO_IMPL_CFLAGS@
 
 
 STLIBOBJS= md5.o
