Add simple automated tests for account lockout support.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24269 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -63,6 +63,7 @@ kdb_check: kdc.conf krb5.conf
 check-pytests::
 	$(RUNPYTEST) $(srcdir)/t_general.py $(PYTESTFLAGS)
 	$(RUNPYTEST) $(srcdir)/t_anonpkinit.py $(PYTESTFLAGS)
+	$(RUNPYTEST) $(srcdir)/t_lockout.py $(PYTESTFLAGS)
 
 clean::
 	$(RM) kdc.conf
